--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/icon/favicon.ico" type="image/x-icon" />
-    <title>Gobongbap</title>
+    <title>Hans Ko</title>
 
     <!-- marked -->
     <script src="./library/marked.min.js"></script>
@@ -57,7 +57,7 @@
         display: inline-block;
       }
       .top-logo {
-        width: 32px;
+        width: 36px;
         padding-bottom: 6px;
         display: inline-block;
       }
@@ -76,8 +76,8 @@
           id="blog-title"
           class="md:text-2xl text-lg leading-6 mr-auto font-semibold text-gray-900 cursor-pointer"
         >
-          <img class="top-logo" src="img/icon/gobongbap.png" />
-          <p class="top-title">고봉밥</p>
+          <img class="top-logo" src="img/icon/egg.svg" />
+          <p class="top-title">Hans Ko</p>
         </h1>
         <!-- // 블로그 제목 영역 -->
 
